2021-??-?? 0.?.?
  * scene-search: Report HTTP request error properly
  * scene-check: Ask user in case of HTTP request error
  * release-name: Go back to accepting anything, even with incomplete
    information


2021-05-17 0.3.1
  * id: Added support for "id:..." query in case search results are incomplete.
  * NBL: Mention --ignore-dupes in relevant error message.
  * bB: New --poster-file argument in case no poster is found.
  * bB: Fixed order of release info.
  * bB: Improve startup time for season packs with lots of tracks in each
    episode.


2021-05-07 0.3.0
  * Fixed: "Connection reset by peer"
  * Added support for tracker: bB
  * Renamed command: create-torrent -> torrent-create
  * Renamed command: add-torrent -> torrent-add
  * New command: scene-search: List scene release names
  * New command: scene-check: Identify release as scene and check if it was
    altered
  * New option: config.main.cache_directory specifies where *.upsies directories
    and other cache files are put (default: ~/.cache/upsies)
  * New option: config.main.max_cache_size specifies the maximum size of
    config.main.cache_directory before old files are removed
  * release-name: Don't accept release name if any obligatory information is
    unknown.
  * Better video resolution detection
  * Look up announce URLs on the tracker instead of the config file
  * torrent-create: Store creation date in .torrent file


2021-01-26 0.1.0
  * NBL: Added --ignore-dupes option


2021-01-14 0.0.1
  * Initial release